src/css/window/titlebar.css
div.window:not(.focused) > div.titlebar,
div.window:not(.focused) > div.body div.titlebar.custom {
  opacity: 0.5;
}

div.window > div.titlebar,
div.window > div.body div.titlebar.custom {
  display: flex;
  flex-direction: row;

  align-items: center;
  gap: 10px;
  width: 100%;
  height: 40px;
  z-index: 100;
  padding: 5px 10px;
  font-size: 12px;
  position: relative;
  min-height: 40px;
  transition: opacity 0.1s !important;
}
div.window > div.titlebar div.window-title,
div.window > div.body div.titlebar.custom div.window-title {
  display: flex;
  align-items: center;
  gap: 10px;
  line-height: 18px;
  max-width: 70%;
}

div.window > div.titlebar div.window-title > img,
div.window > div.body div.titlebar.custom div.window-title > img {
  height: 20px;
  min-width: 20px;
}

div.window > div.titlebar div.window-title > span,
div.window > div.body div.titlebar.custom div.window-title > span {
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

div.window div.titlebar button.feedback {
  margin: 0;
  padding: 0;
  border: none;
  background-color: transparent;
  text-decoration: underline;
  color: var(--accent-lighter);
  margin-left: auto !important;
}

